<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/bottom_sheet_layout"
    android:orientation="vertical"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#efefef"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/tv_total_price"
            android:text="@string/order_details"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/_666"
            android:textSize="18sp" />

    </RelativeLayout>
    <TextView
        android:id="@+id/tv_order_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_details"
        android:textSize="16sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Orderer"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/edt_Orderer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box_input_item"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:textSize="18sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/place_of_delivery"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/edt_place_of_delivery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box_input_item"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:textSize="18sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:layout_margin="10dp"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/btn_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/order_confirmation"
            android:textAllCaps="false"
            android:layout_margin="10dp"
            android:layout_gravity="center"/>

    </LinearLayout>


</LinearLayout>