<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/tv_total_price"
                android:text="@string/order_details"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/_666"
                android:textSize="18sp" />

        </RelativeLayout>
        <TextView
            android:id="@+id/tv_order_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_details"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Orderer"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_oder_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Orderer"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/place_of_delivery"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_place_of_delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/place_of_delivery"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/time_order"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_time_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_order"
            android:layout_marginTop="5dp"
            android:padding="5dp"
            android:textSize="18sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="8dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Đã giao hàng"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="18sp"/>

        </LinearLayout>





    </LinearLayout>


</androidx.cardview.widget.CardView>