<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/homeFragmentLayout">
        <TextView
            android:id="@+id/txt_hi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/hello"
            android:textColor="#dd3d00"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.SearchView
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_hi"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/border"
            android:focusable="false"
            app:closeIcon="@drawable/ic_baseline_clear_24"
            app:iconifiedByDefault="false"
            app:queryHint="Search..."
            app:searchHintIcon="@null"
            app:searchIcon="@drawable/ic_baseline_search_24" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@+id/search"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/orange_light_banner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/txtCategories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/constraintLayout"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:text="@string/categories"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="22dp"
            android:paddingEnd="22dp"
            android:layout_below="@id/txtCategories"/>
        <TextView
            android:id="@+id/txt_food_suggestions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/txt_food_suggestions"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_below="@+id/rvCategory" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/txt_food_suggestions"
            android:paddingStart="22dp"
            android:paddingEnd="22dp"
            android:scrollbars="vertical" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/teal_200"
            android:src="@drawable/ic_baseline_add_24"
            app:tint="@color/white"
            android:visibility="gone"
            android:contentDescription="@string/todo" />

    </RelativeLayout>


</ScrollView>