<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    android:layout_marginStart="12dp"
    android:layout_marginEnd="12dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_user"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_avatar_default" />


        <TextView
            android:id="@+id/tv_name_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/img_user"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_phone_user"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/tv_name_user"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/img_user"
            android:text="@string/phone_number"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_email_user"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/tv_phone_user"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/img_user"
            android:text="Email"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/img_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/tv_feedback_user"
            android:layout_alignParentTop="true"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="9dp"
            android:src="@drawable/ic_baseline_delete_forever_24"
            android:textAlignment="center"
            android:textColor="@color/yellow" />

        <TextView
            android:id="@+id/tv_feedback_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_email_user"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:lines="3"
            android:maxLines="1"
            android:text="@string/send_feedback"
            android:textColor="@color/brown"
            android:textSize="20sp" />


    </RelativeLayout>


</androidx.cardview.widget.CardView>