<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".activity_upload">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="50dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Upload Data"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="30sp" />

                <ImageView
                    android:id="@+id/uploadImage"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/uploadimg" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Tên món ăn(*)"
                    android:textSize="24sp"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/edt_name_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border"
                    android:hint="Tên..."
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Loại thực phẩm(*)"
                    android:textSize="24sp"
                    android:textStyle="italic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/spinner_items"
                        android:prompt="@string/spinner_prompt"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Mô tả món ăn(*)"
                    android:textSize="24sp"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/edt_desc_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border"
                    android:gravity="top|start"
                    android:hint="Mô tả..."
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:padding="10dp"
                    android:textSize="24dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Giá món ăn(*)"
                    android:textSize="24sp"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/edt_price_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border"
                    android:ems="10"
                    android:hint="Giá..."
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Khuyến mãi(%)"
                    android:textSize="24sp"
                    android:textStyle="italic" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_promotion_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border"
                    android:ems="10"
                    android:hint="@string/promotion"
                    android:padding="10dp"
                    android:textSize="24sp" />


                <Button
                    android:id="@+id/btn_add_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/add"
                    android:textColor="@color/white"
                    app:cornerRadius="20dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>



</ScrollView>